# simple-webrtc

./: CMakeLists.txt  README.md
apm/: Android.mk  CMakeLists.txt
apm/codecs/cng/: Android.mk  CMakeLists.txt  cng_helpfuns.c  cng_helpfuns.h  webrtc_cng.c
apm/codecs/cng/include/: webrtc_cng.h
apm/codecs/g711/: Android.mk  CMakeLists.txt  g711.c  g711.h  g711_interface.c
apm/codecs/g711/include/: g711_interface.h
apm/codecs/g722/: Android.mk  CMakeLists.txt  g722_decode.c  g722_enc_dec.h  g722_encode.c  g722_interface.c
apm/codecs/g722/include/: g722_interface.h
apm/codecs/ilbc/: Android.mk  CMakeLists.txt  constants.h  defines.h  vq3.h  vq4.h
apm/codecs/ilbc/interface/: ilbc.h
apm/codecs/isac/: Android.mk
apm/codecs/isac/main/interface/: isac.h
apm/codecs/opus/: Android.mk  CMakeLists.txt  opus_interface.c
apm/codecs/opus/interface/: opus_interface.h
apm/codecs/opus/src/: Android.mk  Application.mk  CMakeLists.txt  opus.target.linux-arm.mk  opus.target.linux-x86.mk
apm/codecs/pcm16b/: Android.mk  CMakeLists.txt  pcm16b.c
apm/codecs/pcm16b/include/: pcm16b.h
apm/main/acm2/: Android.mk  CMakeLists.txt  acm_amr.cc  acm_amr.h  acm_amrwb.cc  acm_amrwb.h  acm_celt.cc  acm_celt.h  acm_cng.cc  acm_cng.h  acm_codec_database.cc  acm_codec_database.h  acm_common_defs.h  acm_dtmf_playout.cc  acm_dtmf_playout.h  acm_g722.cc  acm_g722.h  acm_g7221.cc  acm_g7221.h  acm_g7221c.cc  acm_g7221c.h  acm_g729.cc  acm_g729.h  acm_g7291.cc  acm_g7291.h  acm_generic_codec.cc  acm_generic_codec.h  acm_gsmfr.cc  acm_gsmfr.h  acm_ilbc.cc  acm_ilbc.h  acm_opus.cc  acm_opus.h  acm_pcm16b.cc  acm_pcm16b.h  acm_pcma.cc  acm_pcma.h  acm_pcmu.cc  acm_pcmu.h  acm_receiver.cc  (+16 more)
apm/main/acm2/to_remove/: acm_isac.h  acm_isac_macros.h
apm/main/common_audio/: Android.mk  CMakeLists.txt  audio_util.cc  blocker.cc  blocker.h  channel_buffer.cc  channel_buffer.h  engine_configurations.h  fir_filter.cc  fir_filter_neon.cc  fir_filter_neon.h  fir_filter_sse.cc  fir_filter_sse.h  lapped_transform.h  real_fourier.cc  wav_header.cc  wav_writer.cc  window_generator.cc  window_generator.h
apm/main/common_audio/include/: audio_util.h
apm/main/common_audio/resampler/: Android.mk  CMakeLists.txt  push_resampler.cc  push_sinc_resampler.cc  push_sinc_resampler.h  sinc_resampler.cc  sinc_resampler.h  sinc_resampler_sse.cc  sinusoidal_linear_chirp_source.h
apm/main/common_audio/resampler/include/: push_resampler.h  resampler.h
apm/main/common_audio/signal_processing/: Android.mk  CMakeLists.txt  complex_fft.c  complex_fft_tables.h  lpc_to_refl_coef.c  resample_by_2_internal.h  spl_init.c  splitting_filter.c
apm/main/common_audio/signal_processing/include/: real_fft.h  signal_processing_library.h
apm/main/common_audio/vad/: Android.mk  CMakeLists.txt  vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_gmm.c  vad_gmm.h  vad_sp.c  vad_sp.h  webrtc_vad.c
apm/main/common_audio/vad/include/: webrtc_vad.h
apm/main/interface/: audio_coding_module.h  audio_coding_module_typedefs.h
apm/main/test/: TestAllCodecs.cc
apm/main/tests/: Android.mk  CMakeLists.txt  Channel.cc  Channel.h  PCMFile.cc  PCMFile.h  Test.cc  TestAllCodecs.cc  TestAllCodecs.h
apm/neteq/: Android.mk  CMakeLists.txt  accelerate.cc  accelerate.h  audio_classifier.cc  audio_classifier.h  audio_decoder.cc  audio_decoder_impl.cc  audio_decoder_impl.h  audio_multi_vector.cc  audio_multi_vector.h  audio_vector.cc  audio_vector.h  background_noise.cc  background_noise.h  buffer_level_filter.cc  buffer_level_filter.h  comfort_noise.cc  comfort_noise.h  decision_logic.cc  decision_logic.h  decision_logic_fax.cc  decision_logic_fax.h  decision_logic_normal.cc  decision_logic_normal.h  decoder_database.cc  decoder_database.h  delay_manager.cc  delay_manager.h  delay_peak_detector.cc  delay_peak_detector.h  dsp_helper.cc  dsp_helper.h  dtmf_buffer.cc  dtmf_buffer.h  dtmf_tone_generator.cc  dtmf_tone_generator.h  expand.cc  expand.h  merge.cc  (+27 more)
apm/neteq/interface/: audio_decoder.h  neteq.h
apm/neteq/tools/: packet.h
rtp_rtcp/: .gitignore  Android.mk
rtp_rtcp/base/: Android.mk  metrics.h  metrics_default.cc  onetimeevent.h  platform_file.cc  rate_limiter.cc  rate_statistics.cc  rtc_event_log.cc  rtp_rtcp_common_types.cc  timestamp_extrapolator.cc  timestamp_extrapolator.h
rtp_rtcp/common_video/: Android.mk  bitrate_adjuster.cc
rtp_rtcp/common_video/h264/: h264_common.cc  h264_common.h  pps_parser.cc  pps_parser.h  sps_parser.cc  sps_parser.h  sps_vui_rewriter.cc  sps_vui_rewriter.h
rtp_rtcp/common_video/include/: bitrate_adjuster.h
rtp_rtcp/remote_bitrate_estimator/include/: bwe_defines.h  remote_bitrate_estimator.h
rtp_rtcp/rtp_rtcp/: Android.mk
rtp_rtcp/rtp_rtcp/include/: bwe_defines.h  fec_receiver.h  optional.h  platform_file.h  rate_limiter.h  rate_statistics.h  receive_statistics.h  remote_bitrate_estimator.h  remote_ntp_time_estimator.h  rtc_event_log.h  rtp_cvo.h  rtp_header_extension.h  rtp_header_parser.h  rtp_payload_registry.h  rtp_receiver.h  rtp_receiver_strategy.h  rtp_rtcp.h  rtp_rtcp_defines.h  rtp_utility.h
rtp_rtcp/rtp_rtcp/source/: byte_io.h  dtmf_queue.cc  dtmf_queue.h  fec_private_tables_bursty.h  fec_private_tables_random.h  fec_receiver_impl.cc  fec_receiver_impl.h  forward_error_correction.cc  forward_error_correction.h  forward_error_correction_internal.cc  forward_error_correction_internal.h  packet_loss_stats.cc  playout_delay_oracle.cc  rtcp_packet.h  (+59 more)
rtp_rtcp/udp_transport/: Android.mk
system_wrappers/: Android.mk  CMakeLists.txt
system_wrappers/interface/: array_view.h  atomicops.h  bitbuffer.h  buffer.h  bytebuffer.h  byteorder.h  checks.h  clock.h  common.h  common_types.h  config.h  module.h  module_common_types.h  ntp_time.h  random.h  rtp_to_ntp.h  timeutils.h  transport.h  typedefs.h
system_wrappers/source/: Android.mk  CMakeLists.txt  bitbuffer.cc  bytebuffer.cc  checks.cc  clock.cc  common_types.cc  config.cc  logging.cc  random.cc  rtp_to_ntp.cc  rw_lock_posix.cc  timeutils.cc
system_wrappers/test/: Android.mk
system_wrappers/test/list/: Android.mk  list.cc
(+69 files in other folders)
