cmake_minimum_required(VERSION 2.8)

PROJECT(WEBRTC)

MESSAGE(INFO " PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(INFO " PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

MESSAGE(INFO " CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE(INFO " CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE(INFO " CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE(INFO " IS ANDROID: ${ANDROID}")

ADD_SUBDIRECTORY(apm)
ADD_SUBDIRECTORY(system_wrappers)
#ADD_SUBDIRECTORY(../rtp_rtcp)
