cmake_minimum_required(VERSION 2.8)

#PROJECT(APM)

MESSAGE(INFO " PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(INFO " PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

if (ANDROID)
  ADD_DEFINITIONS(-D_OS_LINUX -D_OS_ANDROID)
elseif(LINUX)
  ADD_DEFINITIONS(-D_OS_LINUX)
else(ANDROID)
  ADD_DEFINITIONS(-D_OS_LINUX)
endif (ANDROID)

SET(CMAKE_PRJ_C_FLAGS "-Werror -Wall")
SET(CMAKE_PRJ_CXX_FLAGS "")

ADD_SUBDIRECTORY(main/acm2)
ADD_SUBDIRECTORY(neteq)
ADD_SUBDIRECTORY(main/tests)
ADD_SUBDIRECTORY(main/common_audio)
ADD_SUBDIRECTORY(codecs/cng)
ADD_SUBDIRECTORY(codecs/g722)
ADD_SUBDIRECTORY(codecs/g711)
ADD_SUBDIRECTORY(codecs/ilbc)
#ADD_SUBDIRECTORY(codecs/isac)
ADD_SUBDIRECTORY(codecs/opus)
ADD_SUBDIRECTORY(codecs/pcm16b)

MESSAGE(INFO " CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE(INFO " CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE(INFO " CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE(INFO " IS ANDROID: ${ANDROID}")
