cmake_minimum_required(VERSION 2.8)

MESSAGE(INFO " PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(INFO " PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

if (ANDROID)
  ADD_DEFINITIONS(-D_OS_LINUX -D_OS_ANDROID -DWEBRTC_LINUX -DWEBRTC_POSIX -DWEBRTC_ANDROID)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
elseif(LINUX)
  ADD_DEFINITIONS(-D_OS_LINUX -DWEBRTC_LINUX -DWEBRTC_POSIX)
else()
  ADD_DEFINITIONS(-D_OS_LINUX)
endif ()

SET(CMAKE_PRJ_C_FLAGS "-Werror -Wall")
SET(CMAKE_PRJ_CXX_FLAGS "")

ADD_SUBDIRECTORY(source)

MESSAGE(INFO " CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE(INFO " CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE(INFO " CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE(INFO " IS ANDROID: ${ANDROID}")
