AUX_SOURCE_DIRECTORY(. pcm16_src)
INCLUDE_DIRECTORIES("./include" ../../../)
ADD_LIBRARY(libpcm16 STATIC ${pcm16_src})
if (NOT ANDROID)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
endif ()

MESSAGE(INFO " libpcm16 CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")

SET_TARGET_PROPERTIES(libpcm16 PROPERTIES OUTPUT_NAME "libpcm16")
TARGET_LINK_LIBRARIES(libpcm16 libsystem_wrappers)
