AUX_SOURCE_DIRECTORY(. acm2_test_src)
INCLUDE_DIRECTORIES(../ ../../ ../../../ ./inc ./src)

if (ANDROID)
  SET(CMAKE_EXE_LINKER_FLAGS "-pie -fPIE -llog ${CMAKE_EXE_LINKER_FLAGS}")
endif (ANDROID)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wno-unused-local-typedefs -Wno-sign-compare")
MESSAGE(INFO " CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_C_FLAGS} -pthread")
MESSAGE(INFO " CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(acm_test ${acm2_test_src})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(acm_test libacm2)
